[gd_scene load_steps=5 format=3 uid="uid://bxwjy4fsjewmr"]

[ext_resource type="Theme" uid="uid://crq1fwn0ajw7b" path="res://gdre_theme.tres" id="1_7ifdu"]
[ext_resource type="Script" uid="uid://cpaht3hkp5dqf" path="res://gdre_decompile.gd" id="1_vihwl"]
[ext_resource type="Script" uid="uid://cbggqwojxui00" path="res://gdre_child_dialog.gd" id="2_7ifdu"]
[ext_resource type="Texture2D" uid="uid://70wmkccoq7gp" path="res://gdre_icons/gdre_GuiTabMenuHl.svg" id="4_hil8r"]

[node name="GdreDecompile" type="AcceptDialog"]
title = "Decompile GDScript"
position = Vector2i(0, 24)
size = Vector2i(1360, 594)
visible = true
theme = ExtResource("1_7ifdu")
ok_button_text = "Decompile"
dialog_hide_on_ok = false
script = ExtResource("1_vihwl")
metadata/_custom_type_script = ExtResource("2_7ifdu")

[node name="Box" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = 1352.0
offset_bottom = 545.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScriptFilesLabel" type="Label" parent="Box/VBoxContainer"]
layout_mode = 2
text = "Script Files"

[node name="FileList" type="ItemList" parent="Box/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonHBox" type="HBoxContainer" parent="Box/VBoxContainer"]
layout_mode = 2

[node name="AddFilesButton" type="Button" parent="Box/VBoxContainer/ButtonHBox"]
layout_mode = 2
text = "Add Files..."

[node name="RemoveFilesButton" type="Button" parent="Box/VBoxContainer/ButtonHBox"]
layout_mode = 2
text = "Remove Files"

[node name="ClearFilesButton" type="Button" parent="Box/VBoxContainer/ButtonHBox"]
layout_mode = 2
text = "Clear files"

[node name="ScriptBytecodeVersionLabel" type="Label" parent="Box/VBoxContainer"]
layout_mode = 2
text = "Script bytecode version:"

[node name="BytecodeSelector" type="OptionButton" parent="Box/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
item_count = 1
popup/item_0/text = "--- Please select bytecode version ---"
popup/item_0/id = 0

[node name="DestinationFolderLabel" type="Label" parent="Box/VBoxContainer"]
layout_mode = 2
text = "Destination folder:"

[node name="DestinationFolderHBox" type="HBoxContainer" parent="Box/VBoxContainer"]
layout_mode = 2

[node name="DestinationFolder" type="LineEdit" parent="Box/VBoxContainer/DestinationFolderHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DestinationFolderButton" type="Button" parent="Box/VBoxContainer/DestinationFolderHBox"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("4_hil8r")
icon_alignment = 1
expand_icon = true

[node name="AddFilesDialog" type="FileDialog" parent="."]
title = "Open File(s)"
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.gdc,*.gde;GDScript binary files")
show_hidden_files = true
use_native_dialog = true

[node name="DestinationFolderDialog" type="FileDialog" parent="."]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
show_hidden_files = true
use_native_dialog = true
